--- a/.github/workflows/config-update.yml
+++ b/.github/workflows/config-update.yml
@@ -58,7 +58,8 @@ jobs:
 
       - name: Initialize Drupal Installation
         run: |
-          cd ${{ env.path_to_site_codebase_on_runner }}/web
+          cd ${{ env.path_to_site_codebase_on_runner }}
+          composer install --no-progress --no-interaction
           ./vendor/bin/drush si -y
           sudo chown -R www-data:www-data ${{ env.path_to_site_codebase_on_runner }}/web
 
