Revise php 8.2 setup in config-update

--- a/.github/workflows/config-update.yml
+++ b/.github/workflows/config-update.yml
@@ -21,8 +21,13 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-
-      - name: Setup Apache and PHP 8.2
+      - name: Set up PHP 8.2
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "8.2"
+          extensions: mbstring, curl, zip
+          coverage: none
+      - name: Setup Apache
         run: |
           sudo apt-get update
           sudo apt-get install -y software-properties-common
