--- a/.github/workflows/config-update.yml
+++ b/.github/workflows/config-update.yml
@@ -1,4 +1,5 @@
-name: Enhanced LAMP Setup with PHP 8.2 for Drupal
+name: Enhanced LAMP Setup, Deploy, and Config Update
+
 on:
   workflow_dispatch:
 
@@ -21,12 +22,14 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
+
       - name: Set up PHP 8.2
         uses: shivammathur/setup-php@v2
         with:
           php-version: "8.2"
           extensions: mbstring, curl, zip
           coverage: none
+
       - name: Setup Apache
         run: |
           sudo apt-get update
@@ -69,3 +72,25 @@ jobs:
 
       - name: Start Apache Service
         run: sudo systemctl start apache2
+
+      - name: Sync Database and Update Config
+        env:
+          SSH_USER: aqto-dev
+          SSH_HOST: ${{ secrets.SERVER_IP_ADDRESS }}
+          SSH_PORT: 22
+          SERVER_APP_LOCATION: ${{ secrets.SERVER_APP_LOCATION }}
+        run: |
+          ssh $SSH_USER@$SSH_HOST -p$SSH_PORT -v <<EOF
+          cd $SERVER_APP_LOCATION
+          ./vendor/bin/drush sql-dump --result-file=/tmp/dump.sql
+          EOF
+          cd ${{ env.path_to_site_codebase_on_runner }}
+          scp -P$SSH_PORT $SSH_USER@$SSH_HOST:/tmp/dump.sql .
+          ./vendor/bin/drush sql-drop -y
+          ./vendor/bin/drush sql-cli < dump.sql
+          ./vendor/bin/drush cex -y
+          git config --global user.name "aqto-auto"
+          git config --global user.email "tyler@tylerfahey.com"
+          git add .
+          git commit -m "Update config from live"
+          git push origin main
