Apply fix from sql-dump for collation error

--- a/.github/workflows/config-update.yml
+++ b/.github/workflows/config-update.yml
@@ -100,6 +100,10 @@ jobs:
           EOF
           cd ${{ env.path_to_site_codebase_on_runner }}
           scp -P$SSH_PORT $SSH_USER@$SSH_HOST:/tmp/dump.sql .
+      
+          # Apply the sed fix to the dump file
+          sed -i 's/utf8mb4_0900_ai_ci/utf8mb4_unicode_ci/g' dump.sql
+      
           ./vendor/bin/drush sql-drop -y
           ./vendor/bin/drush sql-cli < dump.sql
           ./vendor/bin/drush cex -y
