--- a/.github/workflows/config-update.yml
+++ b/.github/workflows/config-update.yml
@@ -88,7 +88,7 @@ jobs:
         run: sudo systemctl start apache2
       - name: Configure Git to Use SSH
         run: |
-          git remote set-url origin git@github.com:${{ github.repository }}.git
+          git remote set-url origin git@github.com:${{ github.repository_owner }}/${{ github.repository }}.git
       - name: Sync Database and Update Config
         env:
           SSH_USER: aqto-dev
