Revise to use gh_pat for pushback

--- a/.github/workflows/config-update.yml
+++ b/.github/workflows/config-update.yml
@@ -33,8 +33,6 @@ jobs:
             StrictHostKeyChecking=no
             PasswordAuthentication no
             PubkeyAuthentication yes
-            Host *.drush.in
-            StrictHostKeyChecking no
           known_hosts: |
             127.0.0.1
       - name: Set up PHP 8.2
@@ -107,10 +105,13 @@ jobs:
           ./vendor/bin/drush sql-drop -y
           ./vendor/bin/drush sql-cli < dump.sql
           ./vendor/bin/drush cex -y
+      - name: Commit and Push Changes to GitHub
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
+        run: |
           git config --global user.name "aqto-auto"
           git config --global user.email "tyler@tylerfahey.com"
-          git remote set-url origin git@github.com:${{ github.repository }}.git
-          git remote -v
+          git remote set-url origin https://$GH_PAT@github.com/${{ github.repository }}.git
           git add .
           git commit -m "Update config from live"
           git push origin main
