Remove site install op and test creds from config update job

--- a/.github/workflows/config-update.yml
+++ b/.github/workflows/config-update.yml
@@ -79,7 +79,8 @@ jobs:
       - name: Initialize Drupal Installation
         run: |
           cd ${{ env.path_to_site_codebase_on_runner }}
-          ./vendor/bin/drush si -y
+          # It's a fresh site at this point with fresh db, could theoretically do any ops on the fresh codebase e.g. site install:
+          # ./vendor/bin/drush si -y
           sudo chown -R www-data:www-data ${{ env.path_to_site_codebase_on_runner }}/web
 
       - name: Start Apache Service
