--- a/.github/workflows/config-update.yml
+++ b/.github/workflows/config-update.yml
@@ -132,6 +132,16 @@ jobs:
           else
             echo "No changes to commit"
           fi
+          # Lets do the same for aqto_layout_builder_styles
+          ./vendor/bin/drush fr aqto_layout_builder_styles -y
+          # Add + commit the resulting changes.
+          git add .
+          if [ -n "$(git status --porcelain)" ]; then
+            git commit -m "Revert aqto_layout_builder_styles feature from live site."
+            git push origin main
+          else
+            echo "No changes to commit"
+          fi
       - name: Run a composer update and a drush updb -y
         run: |
           cd ${{ env.path_to_site_codebase_on_runner }}
