--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,10 +34,16 @@ jobs:
           cd $SERVER_APP_LOCATION
           # First lets sql dump to a "${{ secrets.SERVER_APP_LOCATION }}/../backups/deploy-pre-backup.sql" file
           ./vendor/bin/drush sql-dump --result-file="${{ secrets.SERVER_APP_LOCATION }}/../backups/deploy-pre-backup.sql"
+          # Next, lets chmod things like web/sites/default, web/sites/default/services.yml, web/sites/default/settings.default.php, to be writable so the git pull and subsequent composer updates dont weirdly fail
+          chmod -R 777 web/sites/default
+          # Now lets git pull and composer install
           git pull
           composer install --no-progress --no-interaction
           # Now lets drush cache rebuild + drush config import + drush updb -y
           ./vendor/bin/drush cr -y
           ./vendor/bin/drush cim -y
           ./vendor/bin/drush updb -y
+          # Now lets chmod things like web/sites/default, web/sites/default/services.yml, web/sites/default/settings.default.php, to be read-only again
+          chmod -R 555 web/sites/default
+          
           EOF
