--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,9 @@ jobs:
           # Next, lets chmod things like web/sites/default, web/sites/default/services.yml, web/sites/default/settings.default.php, to be writable so the git pull and subsequent composer updates dont weirdly fail
           chmod -R 777 web/sites/default
           # Now lets git pull and composer install
+          git clean -rf
+          git reset --hard
+          git checkout main
           git pull
           composer install --no-progress --no-interaction
           # Now lets drush cache rebuild + drush config import + drush updb -y
@@ -45,5 +48,5 @@ jobs:
           ./vendor/bin/drush updb -y
           # Now lets chmod things like web/sites/default, web/sites/default/services.yml, web/sites/default/settings.default.php, to be read-only again
           chmod -R 555 web/sites/default
-          
+
           EOF
