--- a/.github/workflows/config-update.yml
+++ b/.github/workflows/config-update.yml
@@ -174,6 +174,8 @@ jobs:
         run: |
           ssh $SSH_USER@$SSH_HOST -p$SSH_PORT -v <<EOF
           cd $SERVER_APP_LOCATION
+          # Next, lets chmod things like web/sites/default, web/sites/default/services.yml, web/sites/default/settings.default.php, to be writable so the git pull and subsequent composer updates dont weirdly fail
+          chmod -R 777 web/sites/default
           git pull
           composer install --no-progress --no-interaction 
           # Do a sql-dump to a folder on server /srv/users/aqto-dev/apps/aqto-dev/backups that we'll replace on each deploy.
@@ -181,4 +183,8 @@ jobs:
           ./vendor/bin/drush sql-dump --result-file=/srv/users/aqto-dev/apps/aqto-dev/backups/dump.sql
           # Now we config import any changes to the live site.
           ./vendor/bin/drush cim -y
+          # Now lets chmod things like web/sites/default, web/sites/default/services.yml, web/sites/default/settings.default.php, to be read-only again, just the specific files that matter.
+          chmod 644 web/sites/default/services.yml
+          chmod 644 web/sites/default/settings.default.php
+          chmod 755 web/sites/default
           EOF
