Add chown for runner during update, add output for debugging in update action

--- a/.github/workflows/config-update.yml
+++ b/.github/workflows/config-update.yml
@@ -109,6 +109,7 @@ jobs:
           git config --global user.email "tyler@tylerfahey.com"
 
           # Get the current environment to a clean state
+          sudo chown -R $(whoami):$(whoami) web/
           git reset --hard
           git clean -fd
       
